# openpsytslm

./: .gitmodules  README.md  curriculum_learning.py  pyproject.toml  requirements.txt
src/data/: download_youtube_videos.py
src/descriptions/: combine_transcripts_with_time_series_descriptions.py  combine_transcripts_with_time_series_descriptions_noxi.py  generate_time_series_descriptions.py  generate_time_series_descriptions_noxi.py  summarize.py  summarize_noxi.py
src/get_data/: download_youtube_videos.py  extract_aus_from_stream_files.py  ssi_stream_utils.py
src/get_data/documentation/: video.openface2.txt
src/process_data/: check_aus.py  extract_aus.py  map_speaker_to_aus.py  transcribe.py  utils.py
src/psytslm/: continued_curriculum_learning.py
src/time_series_datasets/: dyadicCoTQADataset.py  dyadloader.py  noxiCoTDataset.py  noxiloader.py  psyCoTQADataset.py  psyloader.py
