[project]
name = "openpsytslm"
version = "0.1.0"
description = "Open-source implementation of the PsyTSLM pipeline enabling synthesis of non-verbal and verbal information during dyadic interactions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "argparse>=1.4.0",
    "chronos-forecasting>=2.2.2",
    "click==8.1.7",
    "datasets>=2.19.2",
    "einops>=0.8.1",
    "einops-exts>=0.0.4",
    "huggingface-hub>=0.36.0",
    "imageio==2.34.2",
    "joblib>=1.5.3",
    "matplotlib==3.10.1",
    "numpy<2",
    "nvidia-ml-py>=13.580.82",
    "open-clip-torch>=2.32.0",
    "openai>=2.15.0",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.9.0.80",
    "openface-test>=0.1.13",
    "pandas==2.2.3",
    "peft>=0.18.1",
    "pillow==9.4.0",
    "pyvim>=3.0.3",
    "requests>=2.32.5",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.7.2",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "tensorboardx==2.6.2.2",
    "timm==1.0.15",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.1",
    "tqdm==4.66.2",
    "transformers>=4.40.2",
    "wfdb>=4.3.0",
    "yt-dlp>=2025.11.12",
]
